<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_library_books"
            android:title="@string/movimentacoes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/grafico" />

        <item
            android:id="@+id/configConta"
            android:icon="@drawable/ic_config"
            android:title="@string/configCont" />
    </group>


    <group>
        <item
            android:id="@+id/usuar"
            android:icon="@drawable/ic_user2"
            android:title="@string/usuario" />
    </group>



</menu>
