<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="com.morganoliveira.contabills.Views.LoginActivity">


    <EditText
        android:id="@+id/email"
        android:layout_width="317dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textCapSentences"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="317dp"
        android:layout_height="47dp"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/entrar"
        android:layout_width="129dp"
        android:layout_height="28dp"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignTop="@+id/password"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="92dp"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cadastrar"
        android:layout_width="132dp"
        android:layout_height="29dp"

        android:layout_alignBaseline="@+id/entrar"
        android:layout_alignBottom="@+id/entrar"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/criarConta"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/activity_horizontal_margin" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="201dp"
        android:layout_height="153dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="105dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="83dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logocontabills" />

</RelativeLayout>
