<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.morganoliveira.contabills.Views.ActivityOperacao"
    tools:showIn="@layout/activity_creditar">

    <EditText
        android:id="@+id/descricaoCred"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textCapSentences"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/valorCred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valorCred"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/valorCred"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/dtini2"
        app:layout_constraintEnd_toStartOf="@+id/repete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dtfim"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/dataFim"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/contasTeste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorCred" />

    <CheckBox
        android:id="@+id/repete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="113dp"
        android:text="@string/repeticao"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/dtfim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/valorCred"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/contasTeste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contasTeste" />

    <TextView
        android:id="@+id/dtini2"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:hint="@string/dataIni"
        android:text="@string/dataIni"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/contasTeste"
        app:layout_constraintEnd_toStartOf="@+id/dtfim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorCred" />

</android.support.constraint.ConstraintLayout>
