<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/side_nav_bar"
    android:backgroundTint="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="175dp"
        android:layout_marginStart="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_marginBottom="9dp"
            android:layout_toLeftOf="@+id/textView10"
            android:layout_toStartOf="@+id/textView10"
            android:text="Contas"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView6"
            android:layout_alignEnd="@+id/textView6"
            android:layout_alignRight="@+id/textView6"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/zero"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView8"
            android:layout_alignRight="@+id/textView8"
            android:layout_below="@+id/textView5"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:text="@string/zero"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignEnd="@+id/textView10"
            android:layout_alignRight="@+id/textView10"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/zero"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:text="@string/atrasadas" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:text="@string/areceber" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:text="@string/apagar" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
